--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,11 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.5",
         "illuminate/database": "^10.5",
         "monolog/monolog": "^2.9",
         "php-di/php-di": "^6.4",
+        "slim/php-view": "^3.2",
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11"
     },
